fix MenuSmile foot dark mode

--- a/src/scss/theme/dark/menu.scss
+++ b/src/scss/theme/dark/menu.scss
@@ -80,7 +80,7 @@
     /* MenuSmile */
 
     .menu.menuSmile {
-        .head { border-color: $colorLineSecondary; color: $colorSecondary; }
+        .head, .foot { border-color: $colorLineSecondary; color: $colorSecondary; }
         .head {
             .btn:hover, .btn.active { color: $colorPrimary; }
         }
